--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
   </section>
   <script src="./script/oop.js"></script>
   <script src="js/script.js"> </script>
+  <!-- <script src="js/main.js"> </script> -->
   <script src="index.js"></script>
 </body>
 
